# lab6

./: CMakeLists.txt  main.cpp
Alive/: Alive.cpp  Alive.h  Animal.cpp  Animal.h  Bird.cpp  Bird.h  Fish.cpp  Fish.h
Animal/: Animal_t.cpp  Animal_t.h  Cat.cpp  Cat.h  Dog.cpp  Dog.h
University/: headman.cpp  headman.h  student.cpp  student.h
